--- a/Registry/View/EditPersonDataUserControl.xaml
+++ b/Registry/View/EditPersonDataUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,14 +8,14 @@
     xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
     mc:Ignorable="d"
-    x:Class="Registry.EditPersonDataView"
-    Title="Редактирование данных пациента" Height="880" Width="600" WindowStartupLocation="CenterScreen"
+    x:Class="Registry.EditPersonDataUserControl"
+    Height="auto" Width="600" Background="White"
     d:DataContext="{d:DesignInstance registry:EditPersonDataViewModel}">
 
-    <Window.Resources>
+    <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <stuffLib:MultiBooleanConverter x:Key="MultiBooleanToInversedVisibilityConverter" UseLogicalOr="True" TrueValue="{x:Static Visibility.Collapsed}" FalseValue="{x:Static Visibility.Visible}" />
-    </Window.Resources>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -116,4 +116,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</UserControl>
