--- a/Registry/View/EditPersonView.xaml
+++ b/Registry/View/EditPersonView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:registry="clr-namespace:Registry"
-        Width="610" SizeToContent="Height">
+        Width="900" SizeToContent="Height">
     <Grid>
         <Grid.ColumnDefinitions >
             <ColumnDefinition Width="auto"/>
@@ -14,9 +14,39 @@
         </Grid.RowDefinitions>
 
         <registry:EditPersonDataUserControl  Grid.Row="0" Grid.Column="0" x:Name="personEditor" DataContext="{Binding EditPersonDataViewModel, Mode=OneWay}"/>
-        <StackPanel Grid.Row="0" Grid.Column="1" Width="30">
-            <Button Content="+"/>
-        </StackPanel>
-        <registry:EditPersonDataUserControl  Grid.Row="0" Grid.Column="3" x:Name="personRelativeEditor"/>
+        <DockPanel Grid.Row="0" Grid.Column="1" LastChildFill="True">
+            <Button DockPanel.Dock="Bottom" Background="Transparent" Height="auto">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="pack://application:,,,/Resources;component/Images/BackArrow24x24.png"/>
+                    <TextBlock Margin="3" Text="К пациенту"/>
+                </StackPanel>
+            </Button>
+            <ListBox ItemsSource="{Binding Relatives}" Width="300">
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition  Width="auto"/>
+                            <ColumnDefinition  Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Center" Padding="3" Height="120" Width="100">
+                            <StackPanel>
+                                <Image Source="{Binding Photo}"/>
+                                <TextBlock Height="48">Нажмите, чтобы сделать фото</TextBlock>
+                            </StackPanel>
+                        </Border>
+                        
+                        <StackPanel>
+                            <TextBlock Margin="2" Text="{Binding RelativeRelation}"/>
+                            <TextBlock Margin="2" Text="{Binding ShortName}"/>
+                        </StackPanel>
+                        </Grid>
+                </DataTemplate>
+            </ListBox>
+        </DockPanel>
+        <registry:EditPersonDataUserControl  Grid.Row="0" Grid.Column="2" x:Name="personRelativeEditor"/>
     </Grid>
 </Window>
