--- a/Registry/View/EditPersonView.xaml
+++ b/Registry/View/EditPersonView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:registry="clr-namespace:Registry"
-        Width="900" SizeToContent="Height">
+        Width="915" SizeToContent="Height">
     <Grid>
         <Grid.ColumnDefinitions >
             <ColumnDefinition Width="auto"/>
@@ -14,7 +14,8 @@
         </Grid.RowDefinitions>
 
         <registry:EditPersonDataUserControl  Grid.Row="0" Grid.Column="0" x:Name="personEditor" DataContext="{Binding EditPersonDataViewModel, Mode=OneWay}"/>
-        <DockPanel Grid.Row="0" Grid.Column="1" LastChildFill="True">
+        <DockPanel Grid.Row="0" Grid.Column="1" Margin="3" LastChildFill="True">
+            <TextBlock Text="Родственники" DockPanel.Dock="Top"  TextAlignment="Center"/>
             <Button DockPanel.Dock="Bottom" Background="Transparent" Height="auto">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/Resources;component/Images/BackArrow24x24.png"/>
@@ -22,29 +23,32 @@
                 </StackPanel>
             </Button>
             <ListBox ItemsSource="{Binding Relatives}" Width="300">
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition  Width="auto"/>
-                            <ColumnDefinition  Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition  Width="auto"/>
+                                <ColumnDefinition  Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
 
-                        <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Center" Padding="3" Height="120" Width="100">
-                            <StackPanel>
-                                <Image Source="{Binding Photo}"/>
-                                <TextBlock Height="48">Нажмите, чтобы сделать фото</TextBlock>
+                            <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Center" Padding="3" Height="120" Width="100">
+                                <StackPanel>
+                                    <Image Source="{Binding Photo}"/>
+                                    <TextBlock Height="48">Нажмите, чтобы сделать фото</TextBlock>
+                                </StackPanel>
+                            </Border>
+
+                            <StackPanel Grid.Column="1" Margin="3">
+                                <TextBlock Text="{Binding RelativeRelationName}"/>
+                                <TextBlock Margin="2" Text="{Binding ShortName}"/>
+                                <CheckBox Content="Представитель" IsChecked="{Binding IsRepresentative}"/>
                             </StackPanel>
-                        </Border>
-                        
-                        <StackPanel>
-                            <TextBlock Margin="2" Text="{Binding RelativeRelation}"/>
-                            <TextBlock Margin="2" Text="{Binding ShortName}"/>
-                        </StackPanel>
                         </Grid>
-                </DataTemplate>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
         </DockPanel>
         <registry:EditPersonDataUserControl  Grid.Row="0" Grid.Column="2" x:Name="personRelativeEditor"/>
