--- a/AdminTools/View/MainWindow.xaml
+++ b/AdminTools/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:ev="clr-namespace:MvvmEventBinding;assembly=MvvmEventBinding"
         xmlns:admintools="clr-namespace:AdminTools"
-        Title="Панель управления" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="Панель управления" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/AdminTools;component/AdminTools.ico">
     <Grid>
         <Menu IsMainMenu="True">
             <Menu.Background>
@@ -17,7 +17,7 @@
             </Menu.Background>
 
             <MenuItem Header="Функции администратора" Padding="5">
-                <MenuItem Header="Редактор пользователей" Padding="0,5,5,5" Click="{ev:EventBinding UsersEditorCommand}">                
+                <MenuItem Header="Учетные записи пользователей" Padding="0,5,5,5" Click="{ev:EventBinding UsersEditorCommand}">                
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="pack://application:,,,/Resources;component/Images/UserGroup48x48.png" />
                     </MenuItem.Icon>
