--- a/AdminTools/View/PermissionsTreeView.xaml
+++ b/AdminTools/View/PermissionsTreeView.xaml
@@ -1,57 +1,16 @@
-﻿<Window
+﻿<UserControl x:Class="AdminTools.View.PermissionsTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:gif="http://wpfanimatedgif.codeplex.com"
-             xmlns:admintools="clr-namespace:AdminTools"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"              
              xmlns:ev="clr-namespace:MvvmEventBinding;assembly=MvvmEventBinding"
-             xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking" x:Class="AdminTools.PermissionsEditorView"
-             mc:Ignorable="d"  WindowState="Maximized" Width="680.222">
-        
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-
-        <Label Grid.Row="0" Grid.Column="0" Content="Пользователи" HorizontalAlignment="Center" />
-        
-        <!-- SEARCH User AREA -->
-        <Border Grid.Row="1" Grid.Column="0" DockPanel.Dock="Top" BorderBrush="Gray" BorderThickness="1,0,1,1">
-            <Border.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#33000000" Offset="0" />
-                    <GradientStop Color="#11000000" Offset="1" />
-                </LinearGradientBrush>
-            </Border.Background>
-
-            <StackPanel HorizontalAlignment="Center" Margin="4" Orientation="Horizontal">
-                <TextBlock Text="Поиск:" Margin="0,3" />
-                <TextBox x:Name="searchUserTextBox" Margin="6,0" Text="{Binding GroupSearchText, UpdateSourceTrigger=PropertyChanged}" Width="200"/>
-                <Button Command="{Binding SearchUserCommand}" Content="Найти" Padding="8,0" />
-            </StackPanel>
-        </Border>
-
-        <!-- User List -->
-        <ListBox Grid.Row="2" Grid.Column="0"/>
-
-        <GridSplitter HorizontalAlignment="Right" 
-                  VerticalAlignment="Stretch" 
-                  Grid.Row = "0"  Grid.Column="1" Grid.RowSpan="3" ResizeBehavior="PreviousAndNext"
-                  Width="5" Background="#FFBCBCBC"/>
-
-        <Label Grid.Row="0" Grid.Column="2" Content="Структура групп пользователей и прав" HorizontalAlignment="Center" />
-
-        <!-- SEARCH Permission AREA -->
-        <Border Grid.Row="1" Grid.Column="2" DockPanel.Dock="Top" BorderBrush="Gray" BorderThickness="1,0,1,1" VerticalAlignment="Top">
+             FocusManager.FocusedElement="{Binding ElementName=searchPermissionTextBox}"
+             xmlns:admintools="clr-namespace:AdminTools.ViewModel"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300" 
+             d:DataContext="{d:DesignInstance admintools:PermissionsTreeViewModel}">
+    <DockPanel>
+        <Border DockPanel.Dock="Bottom" BorderBrush="Gray" BorderThickness="1,0,1,1" VerticalAlignment="Top">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="#33000000" Offset="0" />
@@ -67,7 +26,7 @@
         </Border>
 
         <!-- Permissions TREE -->
-        <TreeView Grid.Row="2"  Grid.Column="2" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ItemsSource="{Binding FirstGeneration}">
+        <TreeView PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown" ItemsSource="{Binding FirstGeneration}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
@@ -98,7 +57,5 @@
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
-
-    </Grid>
-
-</Window>
+    </DockPanel>
+</UserControl>
