--- a/Registry/View/InsuranceDocementView.xaml
+++ b/Registry/View/InsuranceDocementView.xaml
@@ -6,7 +6,7 @@
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
         Title="InsuranceDocementView" Height="300" Width="300">
     <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <ListBox>
+        <ListBox BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding InsuranceDocuments}" x:Name="InsuranceDocumentList">
             <ListBoxItem>
                 <DataTemplate>
                     <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch">
@@ -24,29 +24,27 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Row="0" Grid.Column="0" Margin="2" Text="Вид полиса" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <ComboBox Grid.Row="0" Grid.Column="1" Margin="2" Grid.ColumnSpan="3" ItemsSource="{Binding InsuranceDocumentTypes, Mode=OneWayToSource}" SelectedValue="{Binding InsuranceDocumentTypeId}" 
-                      Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Margin="2" Text="Вид полиса" />
+                        <ComboBox Grid.Row="0" Grid.Column="1" Margin="2" Grid.ColumnSpan="3" ItemsSource="{Binding InsuranceDocumentTypes, Mode=OneWayToSource}" SelectedValue="{Binding InsuranceDocumentTypeId}"                       />
 
-                        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Text="Страховая компания" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Text="Страховая компания" />
 
-                        <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" ItemsSource="{Binding InsuranceCompanies, Mode=OneWayToSource}" SelectedValue="{Binding InsuranceCompanyId}" 
-                      Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" ItemsSource="{Binding InsuranceCompanies, Mode=OneWayToSource}" SelectedValue="{Binding InsuranceCompanyId}" />
 
 
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Серия" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Series}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBlock Grid.Row="3" Grid.Column="2" Text="Номер" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding Number}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Серия" />
+                        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Series}" />
+                        <TextBlock Grid.Row="3" Grid.Column="2" Text="Номер"/>
+                        <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding Number}"/>
 
-                        <TextBlock Grid.Row="4" Grid.Column="0" Text="С " Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding BeginDate}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBlock Grid.Row="4" Grid.Column="2" Text="по" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-                        <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding EndDate}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                        <TextBlock Grid.Row="4" Grid.Column="0" Text="С "/>
+                        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding BeginDate}" />
+                        <TextBlock Grid.Row="4" Grid.Column="2" Text="по" />
+                        <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding EndDate}"/>
                     </Grid>
                 </DataTemplate>
             </ListBoxItem>
-        </ListBox> 
+        </ListBox>
         <Button HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddInsuranceDocument}" Content="Добавить" Margin="5" Background="White"/>
     </StackPanel>
 </Window>
