--- a/Registry/View/InsuranceDocumentView.xaml
+++ b/Registry/View/InsuranceDocumentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Registry.View.InsuranceDocementView"
+﻿<Window x:Class="Registry.InsuranceDocumentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:registry="clr-namespace:Registry"
